--- a/poem.rmd
+++ b/poem.rmd
@@ -1,7 +1,7 @@
 ---
-title: "git_01"
+title: "Jaelynn Schultz"
 author: "Math_116"
-date: "Fall semester"
+date: "Summer 2022"
 output: html_document
 ---
 
